--- a/style.css
+++ b/style.css
@@ -1,131 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Satisfy');
 @import url("https://ellexidecodes.github.io/Discord-Themes/css/new-tags.css");
 ::selection {background:var(--main-color-faded);}
-/*
-TABLE OF CONTENTS
-
-1. Background and Sizing
-  1.a. Main Background
-  1.b. Spacing
-  1.c. General Transparency
-
-2. Titlebar
-  2.a. Main Titlebar
-
-3. Chat
-  3.a. Messages and Codeblocks
-  3.b. Dividers
-  3.c. Transparency
-  3.d. Chat Input Area
-  3.e. Chat Header
-  3.f. Spinners
-  3.g. Welcome Message
-  3.h. Scrollbar
-  3.i. Bot Tags
-  3.j. Linked Channels and Messages
-  3.k. Reactions
-  3.l. Search Bars
-  3.m. Invites
-  3.n. Embeds
-  3.o. Calls
-  3.p. Typing Indicators
-
-4. Channels Area
-  4.a. Channels
-  4.b. Account Details Container
-  4.c. Top Header
-  4.d. Transparency
-  4.e. Group DM Icon
-  4.f. Channel Notice
-
-5. Guilds
-  5.a. Wrapper
-  5.b. Add/Create Guilds Button
-  5.c. Unread and Selected Indicators
-  5.d. Home Icon
-  5.e. Tooltips
-
-6. Members List
-	6.a. Transparency
-	6.b. Selected and Hovered Content
-	6.c. User Status
-
-7. Popups and Dropdowns
-	7.a. Server Dropdown
-	7.b. Status Picker
-	7.c. Context Menus
-	7.d. User Popouts
-	7.e. Pinned Messages/Mentions
-	7.f. Search Popout
-	7.g. Add to Group DM
-	7.h. Select Popouts
-	7.i. Emoji Picker
-	7.j. Gif Picker
-	7.k. RTC Connection Popout
-	7.l. Toasts
-	7.m. Profile Popout
-	7.n. @Everyone Popout
-
-8. Modals
-	8.a. Transparency
-	8.b. Upload Modal
-	8.c. Keyboard Shortcuts Modal
-	8.d. Quick Switcher
-	8.e. Screenshare Modal
-	8.f. Add/Create Guilds Modal
-	8.g. Reactions Modal
-
-9. Settings
-  9.a. Transparency and Sidebar
-  9.b. Buttons and Checkboxes and Switches
-  9.c. My Account
-  9.d. Authorized Apps
-  9.e. Connections
-  9.f. Billing
-  9.g. Nitro
-  9.h. HypeSquad
-  9.i. Voice and Video
-  9.j. Overlay/Streamer Mode
-  9.k. Notifications
-  9.l. Keybinds
-  9.m. Game Activity
-  9.n. Game Library
-  9.o. Language
-  9.p. Change Log
-  9.q. Dev Options
-  9.r. BD Settings
-  9.s. Server Settings
-  9.t. Custom CSS Editor
-  9.u. Changelog
-
-10. Tag Animations (Animations by EllexideCodes, added here for support on tags.)
-	10. Keyframes
-
-11. Store, Activity, Library and Friends
-	11.a. Store
-	11.b. Activity
-  11.c. Library 
-  11.d. Friends
-
-12. Out of app areas
-	12.a. Login Screen
-	12.b. Crash Screen
-	12.c. Loading Screen
-
-13. Plugins
-	13.a. Theme and Pluginrepo
-	13.b. BetterFormattingRedux
-	13.c. GoogleTranslateOption
-	13.d. Share Button
-	13.e. Read All Notifications
-	13.f. Compatibility Tags
-	13.g. DetailedServerTooltips
-	13.h. Reply System
-	13.i. Permissions Viewer
-	13.j. StatusEverywhere
-
-14. Roundness
-*/
 
 /*1. Background and Sizing*/
 /*1.a. Main Background*/
@@ -2768,3 +2643,4 @@ img[src="/assets/5fb477ca84edd15d9a2888ac28365acd.svg"] {
 #app-mount .da-privateChannels .inner-1W0Bkn {
 	border-radius:var(--media-roundness) !important;
 }
+/*Thanks so much for using my theme, whoever decided to look here! Also thank you to the derealised server and everyone in it for their tags.*/
